--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -267,7 +267,7 @@ This mechanism ignored `images_reuse_filename`, which is used to retain original
 
 With **PowerPaste** 6.2.2, the plugin has been switched to use core {productname} image management logic, which takes proper note of `images_reuse_filename`.
 
-Image filenames are now managed correctly, and as expected, when images are uploaded.
+Image filenames are now managed correctly, and as expected, when they are uploaded.
 
 For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpaste.adoc[PowerPaste].
 
