--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -46,7 +46,7 @@ When this alert presents, if the currently set language is one of the xref:bundl
 
 The {productname} 6.7.0 release includes an accompanying release of the **Advanced Code** premium plugin.
 
-**Advanced Code** 3.3.1 includes the following improvement and bugfix:
+**Advanced Code** 3.3.1 includes the following bugfixes:
 
 ==== Going back from a view to the editor in mobile caused an error.
 // TINY-10003
