--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -178,7 +178,7 @@ For information on the **Comments** plugin, see: xref:introduction-to-tiny-comme
 
 The {productname} 6.7.0 release includes an accompanying release of the **Enhanced Media Embed** premium plugin.
 
-**Enhanced Media Embed** 3.1.3 includes the following
+**Enhanced Media Embed** 3.1.3 includes the following bug fix:
 
 ==== Automatic media embed would not work as expected if the link was pasted into a `<div>` element
 // TINY-10060
