--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -661,7 +661,7 @@ Previously, if the `forced_root_block` option was set to `'div'`:
 forced_root_block: 'div',
 ----
 
-multiple lines of text
+and multiple lines of text
 
 [source,html]
 ----
